--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <div class="form-wrap">
       <form class="search-form" id="search-form">
         <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-        <button class="search-button" type="submit"></button>aa
+        <button class="search-button" type="submit"></button>
       </form>
     </div>
 
